feat: 添加聊天室
